# llmc

./: .aider.chat.history.md  .aider.input.history  .claudeignore  .contextallow  .coverage  .gitignore  .ragignore  .thunderdome_context.md  .validation_status.txt  AGENTS.md  AGENTS.md~  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  DEADJOE  DISBLEFORTETELEMENTRY.md  Dockerfile  GEMINI_AGENTS.md  GEMINI_CONTRACTS.md  HANDOFF_RAG_HARDENING.md  LICENSE  LLMCAGENTS.md  Makefile  PERFORMANCE_AUDIT_REPORT.md  README.md  README_M5_Phase1_PATCH.md  README_M5_Phase1b_PATCH.md  README_M5_Phase1c_PATCH.md  README_M5_Phase2_PATCH.md  README_M6_BENCHMARKS_PATCH.md  SCHEMA_ENRICHED_RAG_README.md  SCHEMA_RAG_PROGRESS.md  SCHEMA_RAG_SUMMARY.md  SCHEMA_RAG_TODO.md  SDD.md  TEMPLATE_EXTRACTOR_SUMMARY.md  TURNOVER_CODE_EXEC_FIX.md  check_db.py  claude_desktop_config.json  copy_tui_to_repo.py  (+40 more)
.aider.tags.cache.v4/: cache.db
.artifacts/: codex_wrap.stderr.txt  codex_wrap.stdout.txt
.backup_20251022_200801/: AGENTS.md  CONTRACTS.md  README.md
.claude/: living_memories.md  session_summary_rag_tools_fix.md  turnover1111251044.md
.jules/: sentinel.md
.kilocode/: mcp.json
.llmc/: config.toml
.opencode/: INSTRUCTIONS.md
.rag/: database.sqlite3  index.db  index.db-shm  index.db-wal  spans.jsonl
.sisyphus/: FINAL_STATUS_RUTHLESS_WORKFLOW.md  HANDOFF_ORCHESTRATION_CONTINUATION.md  HANDOFF_RLM_ORCHESTRATION.md  HANDOFF_SUMMARY.txt  WORK_COMPLETE.md  boulder.json
.trash/: debug_config_load.py  inspect_schema.py  reset_embeddings.py
DOCS/: .validation-report.md  1. documenation prompt minimax.md  AGENTS_DISABLETEFORTELEMETRY.md  ARCHITECTURE.md  ARCHITECT_CONCISE_MODE.md  ARCHITECT_INTEGRATION_GUIDE.md  BATCH_ENRICHMENT_OPTIMIZATION.md  CLI_REFERENCE.md  CLI_UX_Progressive_Disclosure.md  CONFIG_SAMPLES.md  Claude_Orchestration_Playbook.md  DEPLOYER_SUMMARY.md  DESKTOP_COMMANDER_INTEGRATION.md  Docgen_User_Guide.md  HLD_RAG_Doctor.md  HLD_TE_Analytics_TUI.md  HLD_TE_MCP.md  HLD_TUI_AGENT.md  INCREMENTAL_ENRICHMENT_IMPLEMENTED.md  Key_Directory_Structure.md  LIVING_TEMPLATE_GUIDE.md  LLMC_USER_GUIDE.md  LLM_COMMANDER_LIVING_TEMPLATE_GUIDE.md  MIGRATION_UNIFIED_CLI.md  P0_ACCEPTANCE.md  Project_Map.md  QUALITY_CHECK_SCHEMA_FIX.md  RAG_DAEMON_ENRICHMENT_INVESTIGATION.md  RAG_DAEMON_FIX_CHECKLIST.md  RAG_DAEMON_FLOW_DIAGRAM.md  RAG_DAEMON_QUICK_REF.md  RAG_DAEMON_SUMMARY.md  RAG_Doctor_User_Guide.md  RAG_Enrichment_Hardening.md  RAG_FIX_COMPLETED.md  RAG_INCREMENTAL_ENRICHMENT_OPTIMIZATION.md  RAG_QUALITY_VALIDATION.md  RAG_SERVICE_COMPLETE_FIX.md  README.md  README_SHIP.md  (+39 more)
PATCHES/: CHANGESET_HOOK_codex_wrap.sh.txt  LLM_GATEWAY_CONTRACTS_HOOK.txt
adapters/: claude.tools.tmpl
api/: server.py
artifacts/: mcp_token_audit.csv
config/: README.md  __init__.py  bootstrap.py  cli.py  config.py  deep_research_services.json  default.toml  llmc-config  llmc_concurrency.env.example  local.example.toml  medical_defaults.toml  validate.py
docker/: .dockerignore  Dockerfile  entrypoint.sh
docs/: preprocessor_flow.md
experiments/: treesitter_graph.py
legacy/: README.md
llmc/: __main__.py  cli.py  client.py  core.py  llmc.toml  main.py  mcgrep.py  mchot.py  mcinspect.py  mcread.py  mcrun.py  mcschema.py  mcwho.py  rag_router.py  security.py  symbol_resolver.py  training_data.py
llmc_agent/: __init__.py  agent.py  cli.py  config.py  prompt.py  session.py  tools.py
llmc_mcp/: __init__.py  admin_tools.py  audit.py  claude_desktop_config.example.json  cli.py  config.py  conftest.py  context.py  daemon.py  db_guard.py  docgen_engine.py  docgen_guard.py  isolation.py  locks.py  maasl.py  mcpo.config.json  merge_meta.py  observability.py  prompts.py  server.py  telemetry.py  test_observability.py  test_smoke.py  test_tool_expansion.py  test_tools_visibility_and_metrics.py
llmc_productization_kit/llmc_production_kit/: Dockerfile  Makefile  README_SHIP.md  SDD.md  compose.yaml  llmc.toml  pyproject.toml
llmc_productization_kit/llmc_production_kit/api/: server.py
llmc_productization_kit/llmc_production_kit/prompts/: porting_agent.md
llmc_productization_kit/llmc_production_kit/scripts/: bootstrap.py
llmc_template/: AGENTS.md  extraction_summary.json
llmc_template_test/: CONTRACTS.md  deploy.py  extraction_summary.json  llmc.toml
llmc_textual_package/: README.md
llmcwrapper/: README.md  __init__.py  adapter.py  llmcwrapper_README.md  pyproject.toml  util.py
llmcwrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llmcwrapper/.llmc/: config.toml
llmcwrapper/.llmc/runs/1763001289-21f09bb2/: events.jsonl  resolved-config.json
llmcwrapper/.llmc/runs/1763001289-d8146463/: events.jsonl
llmcwrapper/.llmc/runs/1763001289-eb734940/: events.jsonl  resolved-config.json
llmcwrapper/.llmc/runs/1763001299-3b853f65/: events.jsonl
llmcwrapper/.llmc/runs/1763001299-485d4c09/: events.jsonl
llmcwrapper/.llmc/runs/1763001299-fdf837f2/: events.jsonl
llmcwrapper/.llmc/runs/1763003020-95f0dbb1/: events.jsonl  resolved-config.json
llmcwrapper/.llmc/runs/1763003025-6096559e/: events.jsonl  resolved-config.json
llmcwrapper/cli/: llmc_doctor.py  llmc_profile.py
llmcwrapper/docs/: Implementation_SDD.md  Migration.md  SDD.md  TestPlan.md
llmcwrapper/docs/ADR/: ADR-2025-11-12-llmcwrapper.md
llmcwrapper/examples/: user_config.example.toml
llmcwrapper/llmcwrapper/: __init__.py  adapter.py  capabilities.py  config.py  costs.py  rag_client.py  telemetry.py  util.py
llmcwrapper/llmcwrapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llmcwrapper/llmcwrapper/cli/: llmc_doctor.py  llmc_profile.py  llmc_rag.py  llmc_yolo.py
llmcwrapper/llmcwrapper/providers/: __init__.py  anthropic.py  base.py  minimax.py
llmcwrapper/providers/: __init__.py  base.py  minimax.py
llmcwrapper/tests/: test_minimax_driver.py
logs/: codexlog.txt  (+1 more)
user_input_files/llmc_productization_kit/llmc_productization_kit/: Dockerfile  README_SHIP.md  compose.yaml  pyproject.toml
user_input_files/llmc_productization_kit/llmc_productization_kit/scripts/: bootstrap.py
(+2488 files in other folders)
