[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmc-rag"
version = "0.1.0"
description = "Code-aware RAG engine: AST chunking, enrichment, SQLite vector store, simple CLI/API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
dependencies = [
    "click>=8.1.7",
    "jsonschema>=4.23.0",
    "sentence-transformers>=3.0.0",
    "tree_sitter==0.20.1",
    "tree_sitter_languages==1.9.1",
    # Torch is needed by sentence-transformers for embeddings.
    "torch>=2.1.0; platform_machine != 'armv7l'",
]

[tool.setuptools.packages.find]
where = ["tools"]
include = ["rag*"]

[project.scripts]
rag = "rag.cli:cli"
